vest-dsl/test/bad/const_byte_array_value_range.vest
const BAR: [u8; 4] = [1, 2, 333, 4]
